appId: com.cyjoon68.shopport
---
- launchApp
- tapOn:
    text: 'Continue'
    optional: true
- tapOn:
    text: 'Close'
    optional: true
- tapOn:
    text: '카카오로 시작하기'
    optional: true
- extendedWaitUntil:
    visible: '메뉴 열기'
    timeout: 30000
- tapOn: '메뉴 열기'
- assertVisible: '새로운 대화 열기'
- tapOn: '새로운 대화 열기'
- tapOn:
    id: 'new-chat-segment-채팅'
- assertVisible:
    id: 'chat-quick-actions'
- tapOn: '최저가 찾기 프롬프트 열기'
- tapOn: '프롬프트 선택: 토너 패드 최저가 찾아줘'
- tapOn: '메시지 보내기'
- extendedWaitUntil:
    visible: '조건에 맞는.*'
    timeout: 30000
