appId: com.cyjoon68.shopport
---
- extendedWaitUntil:
    visible: '쇼핑 질문'
    timeout: 30000
- longPressOn: '쇼핑 질문'
- tapOn:
    text: 'Select all'
    optional: true
- eraseText: 1
- inputText: '${DRAFT_TEXT}'
- assertVisible: '${DRAFT_TEXT}'
